kubernetes/apps/pihole/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-admin
  namespace: pihole
spec:
  redirectRegex:
    regex: ^/$
    replacement: /admin
    permanent: true
