kubernetes/apps/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-admin
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: pihole-redirect-to-admin@kubernetescrd
spec:
  rules:
    - host: pihole.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-dns
                port:
                  number: 80
